tests/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-3.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/unboxed-closure-sugar-used-on-struct-3.rs:14:13
   |
LL |     let b = Bar::(isize, usize)::new(); // OK too (for the parser)
   |             ^^^^^^^^^^^^^^^^^^^ only `Fn` traits may use parentheses
   |
help: use angle brackets instead
   |
LL -     let b = Bar::(isize, usize)::new(); // OK too (for the parser)
LL +     let b = Bar::<isize, usize>::new(); // OK too (for the parser)
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0214`.
